labs/lab2/testsuite/good/core111.cc
int main () {
  printInt(readInt()-1);
  return 0;
}
